--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -3,6 +3,8 @@ $first-color: #80BF1E;
 $second-color: rgb(255, 199, 0);
 $third-color: #00BCB1;
 $fourth-color: rgb(0, 171, 225);
+$fifth-color: #774CBE;
+$sixth-color: #415ADE;
 $bg-color: #fff;
 $text-color: #1a1a1a;
 $text-color-white: #fff;
